# amr-pico-firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: ARCHITECTURE.md  TEST_PLAN.md
firmware/: CMakeLists.txt
firmware/profiles/encoder/: encoder_ls7366r_spi.h  encoder_pio_dma.h
firmware/profiles/motor/: motor_bts7960_pwm.h  motor_sabertooth_packet.h
firmware/profiles/robot/: amr_diff_generic.h
firmware/src/app/: config.h  main.c  state_machine.c  state_machine.h
firmware/src/comm/: microros_node.c  microros_node.h
firmware/src/hal/: hal_encoder.c  hal_encoder.h  hal_encoder_ls7366r_spi.c  hal_encoder_pio_dma.c  hal_motor.c  hal_motor.h  hal_motor_bts7960_pwm.c  hal_motor_sabertooth_packet.c  hal_trace_pins.c  hal_trace_pins.h
firmware/src/utils/: ring_buffer.c  ring_buffer.h
